# flowfi

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  PR_DESCRIPTION.md  README.md  docker-compose.yml  package-lock.json  package.json  pr.md  render.yaml
.claude/: settings.json
.github/: CODEOWNERS  codecov.yml
.github/workflows/: ci.yml  security.yml
backend/: .dockerignore  .env.example  Dockerfile  README.md  package.json  tsconfig.json  vitest.config.ts
backend/docs/: AUTHENTICATION.md
backend/prisma/: schema.prisma  seed.ts
backend/src/: app.ts  logger.ts
backend/src/config/: swagger.ts
backend/tests/: api-version.test.ts  auth-jwt.test.ts  auth.middleware.test.ts  auth.test.ts  cancel.controller.test.ts  claimable.service.test.ts  error.middleware.test.ts  health.test.ts  indexer-service.test.ts  memory-cache.test.ts  rate-limiter.test.ts  redis.test.ts  requestId.test.ts  sandbox.middleware.test.ts  soroban-event-worker.test.ts  soroban-indexer.test.ts  soroban-worker.helpers.test.ts  soroban.service.test.ts  sse.controller.test.ts  stream-rate-limiter.test.ts  stream.controller.test.ts  stream.repository.test.ts  stream.test.ts  stream.validator.test.ts  user-summary-cache.test.ts  user.controller.test.ts  withdraw.handler.test.ts  workers.index.test.ts
contracts/: Cargo.toml  README.md
contracts/stream_contract/src/: errors.rs  events.rs  lib.rs  test.rs  types.rs
docs/: ARCHITECTURE.md  DEVELOPMENT.md
frontend/: .env.example  .gitignore  README.md  package.json  tsconfig.json  vitest.config.ts
scripts/: deploy.sh
(+87 files in other folders)
