[workspace]
resolver = "2"
members = [
  "stream_contract",
]

[workspace.dependencies]
soroban-sdk = "22.0.0"

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true

# WASM size budget: 200KB (200000 bytes) for optimized contract
# Enforced in .github/workflows/ci.yml

[profile.release-with-logs]
inherits = "release"
debug-assertions = true
